Correct polymorphism in ClusterTarget/AddOnClusterTarget
